k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rust-env-ingress
  namespace: default
  #annotations:
    #kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: rust-env
              port:
                number: 3000
